kubernetes/deploy-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels: { app: backend, env: dev }
spec:
  replicas: 1
  selector: { matchLabels: { app: backend } }
  template:
    metadata: { labels: { app: backend, env: dev } }
    spec:
      containers:
        - name: app
          image: docker.io/jorftama/quansfer-backend:1.1
          ports: [ { containerPort: 8000 } ]
          env: [ { name: UPLOAD_DIR, value: /data/uploads } ]
          volumeMounts: [ { name: uploads, mountPath: /data/uploads } ]
      volumes:
        - name: uploads
          persistentVolumeClaim: { claimName: uploads-pvc }
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  labels: { app: backend, env: dev }
spec:
  selector: { app: backend }
  ports: [ { name: http, port: 80, targetPort: 8000 } ]
